UPload Download Dokumen Pekerjaan

--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -142,6 +142,8 @@
             <input type="hidden" id="AturanPengadaan" />
             <input type="hidden" id="AturanPenawaran" />
              <input type="hidden" id="Pemenang" />
+            <input type="hidden" id="isPemenangApproved" />
+            
             <section class="content">
                 <!-- Default box -->
                 <div class="row">
