Monitoring repo, Proyek repo, PKS, JimbisContext

--- a/Reston.EProc.Runner.IIS/View/sistem-monitoring.html
+++ b/Reston.EProc.Runner.IIS/View/sistem-monitoring.html
@@ -268,7 +268,7 @@
                 },
                 //"ajax": 'api/MonitoringSelection/List?search=' + $("#search").val(),
                 "columns": [
-                    { "data": "null" },
+                    { "data": "NOSPK" },
                     { "data": "NamaProyek" },
                     { "data": "NamaPelaksana" },
                     { "data": "Klasifikasi" },
