--- a/Reston.EProc.Runner.IIS/View/sistem-monitoring.html
+++ b/Reston.EProc.Runner.IIS/View/sistem-monitoring.html
@@ -183,7 +183,7 @@
                                         <table id="example1" class="table table-bordered">
                                             <thead>
                                                 <tr>
-                                                    <td class="tengah text-bold">No. PKS</td>
+                                                    <td class="tengah text-bold">No. SPK</td>
                                                     <td class="rata_kiri text-bold">Nama Proyek</td>
                                                     <td class="tengah text-bold">Pelaksana</td>
                                                     <td class="tengah text-bold">Klasifikasi</td>
