--- a/Reston.EProc.Runner.IIS/View/monitoring-proyek-add.html
+++ b/Reston.EProc.Runner.IIS/View/monitoring-proyek-add.html
@@ -168,8 +168,8 @@
                                     </div>
                                     <div class="row">
                                         <div class="form-group col-md-4">
-                                            <label class="title">No. Kontrak:</label>
-                                            <input type="text" class="form-control" id="no-kontrak">
+                                            <label class="title">No. SPK:</label>
+                                            <input type="text" class="form-control" id="no-spk">
                                         </div>
                                         <div class="form-group col-md-4">
                                             <label class="title">Nilai Kontrak:</label>
